--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openregion/prettier-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Prettier shared config",
   "license": "MIT",
   "keywords": [
@@ -18,12 +18,7 @@
     "type": "git",
     "url": "https://github.com/openregion/prettier-config.git"
   },
-  "dependencies": {
-    "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-sass-guidelines": "^12.0.0",
-    "stylelint-config-standard": "^36.0.1"
-  },
   "peerDependencies": {
-    "stylelint": "^16.9.0"
+    "prettier": "^3.3.3"
   }
 }
